--- a/blocks/personalizador_camisetas.liquid
+++ b/blocks/personalizador_camisetas.liquid
@@ -4,7 +4,7 @@
 
 <script>
   // Establecer variable global para el estado de los controles avanzados
-  window.personalizadorDebugMode = {{ block.settings.show_advanced_controls | json }} && '{{ product.template_suffix }}' === 'demo';
+  window.personalizadorDebugMode = {{ block.settings.show_advanced_controls | json }};
 </script>
 
 <div class="product-customization-settings">
