--- a/blocks/personalizador_camisetas.liquid
+++ b/blocks/personalizador_camisetas.liquid
@@ -684,6 +684,9 @@
 </style>
 </div>
 
+<!-- Preload the DaggerSquare font for better performance -->
+<link rel="preload" href="{{ 'daggersquare.ttf' | asset_url }}" as="font" type="font/ttf" crossorigin>
+
 <script src="{{ 'product-customization.js' | asset_url }}" defer></script>
 
 
